# TC_OS_Homework-elevator_simulation

./: .gitignore
src/: CMakeLists.txt  building.cpp  building.h  controller.cpp  controller.h  controller.ui  elevator.cpp  elevator.h  elevator.ui  elevator_sim.pro  mainwindow.cpp
